fix: greeting page - input placeholder translation, text alignment

--- a/src/app/core/pages/greeting-page/greeting-page.component.scss
+++ b/src/app/core/pages/greeting-page/greeting-page.component.scss
@@ -36,6 +36,7 @@
     line-height: 7vh;
     margin-bottom: 5rem;
     font-weight: 100;
+    text-align: center;
   }
 
   &__h2 {
@@ -92,6 +93,7 @@
     line-height: 2rem;
     max-width: 900px;
     font-weight: 300;
+    text-align: justify;
   }
 
   &__span_type_greeting-itself {
